<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- 內容區：整塊都要在底欄上方 -->
    <ScrollView
        android:id="@+id/contentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar"
        android:fillViewport="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo" android:layout_width="72dp" android:layout_height="72dp"
                android:src="@drawable/newlogo" android:contentDescription="@string/app_name" />

            <FrameLayout
                android:id="@+id/blockUserPhoto"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:background="@color/placeholderGray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_user_photo"
                    android:textColor="@color/placeholderText"
                    android:textSize="25sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/blockTextResult"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="15dp"
                android:background="@color/placeholderGray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_text_result"
                    android:textColor="@color/placeholderText"
                    android:textSize="25sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="end" android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="120dp"
                    android:layout_height="42dp"
                    android:backgroundTint="@color/navAccentCyan"
                    android:text="@string/btn_done"
                    android:textColor="@color/navTextDark"
                    android:textSize="17sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- 固定在最底 -->
    <include
        android:id="@+id/bottomBar"
        layout="@layout/layout_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
